templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_PLACEHOLDER-service
spec:
  selector:
    app: APP_PLACEHOLDER
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
