templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: APP_PLACEHOLDER-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: HOST_PLACEHOLDER # Jenkins will replace this (e.g. feature1.localhost)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: APP_PLACEHOLDER-service
                port:
                  number: 8080
